# MKrep

./: .dockerignore  .gitignore  ANALYSIS_RESULTS.txt  APPLICATION_VARIANTS_GUIDE.md  ARCHITECTURE.md  COMPLETE_WORKFLOW_GUIDE.md  COMPLETION_SUMMARY.md  Cluster_MIC_AMR_Viruelnce.py  DATA_STRUCTURE_CHANGES.md  DEPLOYMENT_OPTIONS.md  DOCKER_DEPLOYMENT.md  Dockerfile  ENHANCEMENT_PROGRESS.md  EXAMPLE_RESULTS.md  EXCEL_REPORTS_README.md  EXCEL_REPORT_EXAMPLES.md  FEATURES.md  FINAL_ENHANCEMENT_SUMMARY.md  GITHUB_ACTIONS.md  GITHUB_ACTIONS_SUMMARY.md  IMPLEMENTATION_COMPLETE.md  IMPLEMENTATION_SUMMARY.md  IMPLEMENTATION_SUMMARY_TOOL_PORTAL.md  IMPLEMENTATION_SUMMARY_v1.2.0.md  IMPLEMENTATION_VERIFICATION.txt  IMPROVEMENTS_SUMMARY.md  INNOVATION_PROPOSALS.md  INSTALLATION.md  INTERPRETATION_GUIDE.md  MDR_2025_04_15.py  MDR_ANALYSIS_SUMMARY.md  MIC_AMR_clustering.py  MODULES_DEPLOYMENT_GUIDE.md  MODULE_SEPARATION_README.md  MODULE_VERIFICATION_SUMMARY.md  NETWORK_ANALYSIS_IMPLEMENTATION.md  Network_Analysis_2025_06_26.py  Network_analysis.py  PHYLOGENETIC_ANALYSIS_README.md  PODSUMOWANIE_PL.md  (+55 more)
modules/strepsuis-amrvirkm/: Dockerfile  README.md  docker-compose.yml  pyproject.toml  setup.py
modules/strepsuis-amrvirkm/notebooks/: README.md  cluster_analysis.ipynb
modules/strepsuis-amrvirkm/strepsuis_amrvirkm/: __init__.py  analysis.py  cli.py
modules/strepsuis-phylotrait/: Dockerfile  README.md  docker-compose.yml  pyproject.toml  setup.py
modules/strepsuis-phylotrait/notebooks/: README.md  phylo_analysis.ipynb
modules/strepsuis-phylotrait/strepsuis_phylotrait/: __init__.py  analysis.py  cli.py
separated_repos/strepsuis-amrpat/: .pre-commit-config.yaml  ALGORITHMS.md  BENCHMARKS.md  CHANGELOG.md  CITATION.cff  CONTRIBUTING.md  Dockerfile  README.md  RELEASE_CHECKLIST.md  SECURITY.md  TESTING.md  USER_GUIDE.md  coverage.json  coverage_combined.json  coverage_new.json  pyproject.toml  pytest.ini
separated_repos/strepsuis-amrpat/.github/: copilot-instructions.md
separated_repos/strepsuis-amrpat/examples/: README.md
separated_repos/strepsuis-amrpat/notebooks/: AMRPat_Analysis.ipynb
separated_repos/strepsuis-amrpat/strepsuis_amrpat/: __init__.py  analyzer.py  cli.py  config.py  excel_report_utils.py  mdr_analysis_core.py  synthetic_data_utils.py
separated_repos/strepsuis-amrpat/tests/: conftest.py  test_analyzer.py  test_basic.py  test_cli.py  test_cli_and_utils.py  test_comprehensive_real_data.py  test_config.py  test_config_extended.py  test_end_to_end.py  test_mdr_analysis_core.py  test_quick_coverage.py  test_statistical_validation.py  test_unit_analysis.py  test_validation_and_synthetic.py  test_workflow.py
separated_repos/strepsuis-amrvirkm/: .gitignore  ALGORITHMS.md  BENCHMARKS.md  CHANGELOG.md  CITATION.cff  CONTRIBUTING.md  COVERAGE_STATUS.md  Dockerfile  ENHANCEMENT_SUMMARY.md  EXECUTIVE_SUMMARY.md  FILES_CHANGED.txt  FINAL_REPORT.md  README.md  SECURITY.md  TESTING.md  TESTING_IMPROVEMENTS.md  USER_GUIDE.md  coverage.json  deployment_verification.py  pyproject.toml  pytest.ini  requirements.txt
separated_repos/strepsuis-amrvirkm/.github/: copilot-instructions.md
separated_repos/strepsuis-amrvirkm/data/: README.md
separated_repos/strepsuis-amrvirkm/examples/: README.md  Serotype.csv
separated_repos/strepsuis-amrvirkm/notebooks/: AMRVirKM_Analysis.ipynb  strepsuis-amrvirkm_colab_demo.ipynb
separated_repos/strepsuis-amrvirkm/strepsuis_amrvirkm/: __init__.py  analyzer.py  cli.py  cluster_analysis_core.py  config.py  generate_synthetic_data.py
separated_repos/strepsuis-amrvirkm/synthetic_data/: GENERATION_METHODOLOGY.md  metadata.json  synthetic_metadata.json
separated_repos/strepsuis-amrvirkm/tests/: test_analyzer.py  test_basic.py  test_cli.py  test_cluster_analysis_core.py  test_comprehensive_real_data.py  test_config.py  test_config_extended.py  test_end_to_end.py  test_performance.py  test_performance_benchmarks.py  test_quick_coverage.py  test_statistical_validation.py  test_stress.py  test_synthetic_validation.py  test_unit_analysis.py  test_workflow.py
separated_repos/strepsuis-analyzer/: .coverage  .coveragerc  .gitattributes  .gitignore  CHANGELOG.md  CITATION.cff  COMPREHENSIVE_ENHANCEMENT_REPORT.md  CONTRIBUTING.md  DOCUMENTATION.md  Dockerfile  E2E_IMPLEMENTATION_SUMMARY.md  IMPLEMENTATION_FINAL_SUMMARY.md  IMPLEMENTATION_SUMMARY.md  LICENSE  PERFORMANCE_IMPROVEMENTS.md  README.md  REFACTORING_SUMMARY.md  RELEASE_CHECKLIST.md  SECURITY.md  StrepSuisPhyloCluster_2025_08_11.py  TASK_COMPLETION.md  TESTING.md  TESTING_COVERAGE.md  TEST_COVERAGE_SUMMARY.md  USER_GUIDE.md  app.py  coverage.json  coverage.xml  docker-compose.yml  example_analysis.py  pyproject.toml  pytest.ini  requirements.txt  utils.py  verify_module.py
separated_repos/strepsuis-analyzer/data/: AMR_genes.csv  MGE.csv  MIC.csv  MLST.csv  Plasmid.csv  Serotype.csv  Snp_tree.newick  Virulence.csv
separated_repos/strepsuis-analyzer/docs/: API.md  MATHEMATICAL_VALIDATION.md  PUBLICATION_ROADMAP.md  TESTING.md  WORKFLOW.md
separated_repos/strepsuis-analyzer/examples/: README.md  VIRULENCE_ANALYSIS_REPORT.md
separated_repos/strepsuis-analyzer/notebooks/: README.md
separated_repos/strepsuis-analyzer/scripts/: README.md  e2e_run.py  generate_synthetic_data.py  sanity_check.py
separated_repos/strepsuis-analyzer/strepsuis_analyzer/: __init__.py  analyzer.py  cli.py  config.py  excel_report_utils.py
separated_repos/strepsuis-analyzer/tests/: __init__.py  conftest.py  test_analyzer.py  test_analyzer_comprehensive.py  test_analyzer_extended.py  test_app.py  test_basic.py  test_cli_comprehensive.py  test_cli_extended.py  test_config.py  test_config_extended.py  test_data.py  test_data_loading.py  test_data_validation.py  test_data_validator.py  test_docker_verification.py  test_excel_report_comprehensive.py  test_excel_report_extended.py  test_integration.py  test_mathematical_validation.py  test_phylogenetic_utils.py  test_statistical_analysis.py  test_statistical_functions.py  test_statistical_validation.py  test_statistics.py  test_stats.py  test_synthetic_data.py  (+3 more)
(+462 files in other folders)
