[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "strepsuis-amrvirkm"
version = "1.0.0"
description = "K-Modes Clustering of Antimicrobial Resistance and Virulence Profiles"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
authors = [
    {name = "MK-vet", email = "contact@example.com"}
]
keywords = [
    "bioinformatics",
    "microbiology",
    "genomics",
    "AMR",
    "clustering",
    "k-modes",
    "virulence",
    "streptococcus-suis"
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
    "Topic :: Scientific/Engineering :: Medical Science Apps.",
]

dependencies = [
    "pandas>=1.3.0",
    "numpy>=1.21.0",
    "scipy>=1.7.0",
    "matplotlib>=3.4.0",
    "seaborn>=0.11.0",
    "plotly>=5.0.0",
    "scikit-learn>=1.0.0",
    "kmodes>=0.12.0",
    "prince>=0.7.0",
    "mlxtend>=0.19.0",
    "jinja2>=3.0.0",
    "openpyxl>=3.0.0",
    "xlsxwriter>=3.0.0",
    "kaleido>=0.2.0",
    "pillow>=8.0.0",
    "tqdm>=4.62.0",
    "joblib>=1.1.0",
    "numba>=0.55.0",
    "psutil>=5.8.0",
    "statsmodels>=0.13.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=3.0.0",
    "black>=22.0.0",
    "flake8>=4.0.0",
    "mypy>=0.950",
]

[project.urls]
Homepage = "https://github.com/MK-vet/strepsuis-amrvirkm"
Documentation = "https://github.com/MK-vet/strepsuis-amrvirkm#readme"
Repository = "https://github.com/MK-vet/strepsuis-amrvirkm"
Issues = "https://github.com/MK-vet/strepsuis-amrvirkm/issues"

[project.scripts]
strepsuis-amrvirkm = "strepsuis_amrvirkm.cli:main"

[tool.setuptools]
packages = ["strepsuis_amrvirkm"]

[tool.setuptools.package-data]
strepsuis_amrvirkm = ["templates/*.html"]

[tool.black]
line-length = 100
target-version = ['py38', 'py39', 'py310', 'py311', 'py312']

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
