[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "strepsuis-amrpat"
version = "1.0.0"
description = "MDR pattern detection and co-resistance network analysis for bacterial genomics"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
authors = [
    {name = "MK-vet", email = "support@strepsuis-suite.org"}
]
keywords = [
    "bioinformatics",
    "genomics",
    "antimicrobial-resistance",
    "bacterial-genomics",
    "streptococcus-suis"
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
    "Operating System :: OS Independent"
]

dependencies = [
    "pandas>=1.3.0,<3.0.0",
    "numpy>=1.21.0,<2.0.0",
    "scipy>=1.7.0,<2.0.0",
    "scikit-learn>=1.0.0,<2.0.0",
    "matplotlib>=3.4.0,<4.0.0",
    "seaborn>=0.11.0,<1.0.0",
    "plotly>=5.0.0,<6.0.0",
    "statsmodels>=0.13.0,<1.0.0",
    "jinja2>=3.0.0,<4.0.0",
    "openpyxl>=3.0.0,<4.0.0",
    "xlsxwriter>=3.0.0,<4.0.0",
    "kaleido>=0.2.0,<1.0.0",
    "tqdm>=4.62.0,<5.0.0",
    "joblib>=1.1.0,<2.0.0",
    "biopython>=1.79,<2.0.0",
    "networkx>=2.6.0,<4.0.0"
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0,<9.0.0",
    "pytest-cov>=3.0.0,<6.0.0",
    "black>=22.0.0,<25.0.0",
    "isort>=5.12.0,<6.0.0",
    "ruff>=0.1.0,<1.0.0",
    "mypy>=1.0.0,<2.0.0",
    "bandit>=1.7.0,<2.0.0",
    "pre-commit>=3.0.0,<4.0.0",
    "pdoc3>=0.10.0,<1.0.0",
    "flake8>=4.0.0,<8.0.0"
]

[project.urls]
Homepage = "https://github.com/MK-vet/strepsuis-amrpat"
Repository = "https://github.com/MK-vet/strepsuis-amrpat.git"
Issues = "https://github.com/MK-vet/strepsuis-amrpat/issues"

[project.scripts]
strepsuis-amrpat = "strepsuis_amrpat.cli:main"

[tool.setuptools]
packages = ["strepsuis_amrpat"]

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
ignore_missing_imports = true

[tool.ruff]
line-length = 100
target-version = "py38"
select = ["E", "F", "W", "I", "N", "UP", "B", "C4"]

[tool.black]
line-length = 100
target-version = ["py38", "py39", "py310", "py311", "py312"]

[tool.isort]
profile = "black"
line_length = 100
