[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "strepsuis-analyzer"
version = "1.0.0"
description = "StrepSuisAnalyzer: Interactive Streamlit Application for Comprehensive Genomic and Phenotypic Analysis of Streptococcus suis"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
authors = [
    {name = "MK-vet", email = "support@strepsuis-suite.org"}
]
keywords = [
    "bioinformatics",
    "genomics",
    "streptococcus-suis",
    "interactive-analysis",
    "streamlit",
    "phylogenetics",
    "antimicrobial-resistance"
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
    "Operating System :: OS Independent"
]

dependencies = [
    "streamlit>=1.34.0,<2.0.0",
    "pandas>=2.0.0,<3.0.0",
    "numpy>=1.24.0,<2.0.0",
    "matplotlib>=3.7.0,<4.0.0",
    "seaborn>=0.12.0,<1.0.0",
    "scikit-learn>=1.3.0,<2.0.0",
    "openpyxl>=3.1.0,<4.0.0",
    "kmodes>=0.12.0,<1.0.0",
    "statsmodels>=0.14.0,<1.0.0",
    "plotly>=5.14.0,<6.0.0",
    "bio>=1.6.0,<2.0.0",
    "ete3>=3.1.3,<4.0.0",
    "dendropy>=4.5.2,<5.0.0",
    "streamlit-aggrid>=1.0.0,<2.0.0",
    "streamlit-ace>=0.1.1,<1.0.0",
    "scipy>=1.10.0,<2.0.0",
    "biopython>=1.79,<2.0.0"
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0,<9.0.0",
    "pytest-cov>=3.0.0,<6.0.0",
    "black>=22.0.0,<25.0.0",
    "isort>=5.12.0,<6.0.0",
    "ruff>=0.1.0,<1.0.0",
    "mypy>=1.0.0,<2.0.0",
    "bandit>=1.7.0,<2.0.0",
    "pre-commit>=3.0.0,<4.0.0",
    "pdoc3>=0.10.0,<1.0.0",
    "flake8>=4.0.0,<8.0.0"
]

[project.urls]
Homepage = "https://github.com/MK-vet/strepsuis-analyzer"
Repository = "https://github.com/MK-vet/strepsuis-analyzer.git"
Issues = "https://github.com/MK-vet/strepsuis-analyzer/issues"

[project.scripts]
strepsuis-analyzer = "strepsuis_analyzer.cli:main"

[tool.setuptools]
packages = ["strepsuis_analyzer"]
package-dir = {"" = "src"}

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
ignore_missing_imports = true

[tool.coverage.run]
source = ["src"]
omit = [
    "tests/*",
    "**/test_*.py",
    "**/__pycache__/*",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
    "raise NotImplementedError",
]

[tool.ruff]
line-length = 100
target-version = "py38"
select = ["E", "F", "W", "I", "N", "UP", "B", "C4"]

[tool.black]
line-length = 100
target-version = ["py38", "py39", "py310", "py311", "py312"]

[tool.isort]
profile = "black"
line_length = 100
